Bug 478724 - Dolphin crashes to an assert when using selection mode in both split views
Summary: Dolphin crashes to an assert when using selection mode in both split views
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: split view (other bugs)
Version First Reported In: 24.01.80
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6
: 472711 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-12-19 12:51 UTC by Akseli Lahtinen
Modified: 2023-12-22 08:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Akseli Lahtinen 2023-12-19 12:51:41 UTC
SUMMARY

Dolphin crashes to an assert when using selection mode in both split views and when closing them both.


STEPS TO REPRODUCE
1. Open dolphin and set the current tab to split view
2. Press F2 to open selection mode in split 1
3. Press F2 to open selection mode in split 2
4. Close the first selection mode
5. Close the second selection mode

OBSERVED RESULT

Dolphin crashes to an assert in `DolphinViewContainer::isSelectionModeEnabled()`

EXPECTED RESULT

No crash

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 39
KDE Plasma Version: 5.90.90
KDE Frameworks Version: 5.247.0
Qt Version: 6.6.0
Kernel Version: 6.6.6-200.fc39.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600

ADDITIONAL INFORMATION

Removing the assert fixed the crash and nothing visibly bad happened from removing it.

Backtrace:

#0  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
#1  0x00007f26c14ae8a3 in __pthread_kill_internal (signo=6, threadid=<optimized out>) at pthread_kill.c:78
#2  0x00007f26c145c8ee in __GI_raise (sig=6) at ../sysdeps/posix/raise.c:26
#3  0x00007f26c51def44 in KCrash::defaultCrashHandler (sig=6) at /home/akseli/Repositories/kde/src/kcrash/src/kcrash.cpp:586
#4  0x00007f26c145c9a0 in <signal handler called> () at /lib64/libc.so.6
#5  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
#6  0x00007f26c14ae8a3 in __pthread_kill_internal (signo=6, threadid=<optimized out>) at pthread_kill.c:78
#7  0x00007f26c145c8ee in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#8  0x00007f26c14448ff in __GI_abort () at abort.c:79
#9  0x00007f26c1ae3563 in qAbort () at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/global/qglobal.cpp:161
#10 0x00007f26c1b28be0 in qt_message_fatal<QString&> (message=..., context=<optimized out>) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/global/qlogging.cpp:2003
#11 qt_message(QtMsgType, const QMessageLogContext &, const char *, typedef __va_list_tag __va_list_tag *)
    (msgType=msgType@entry=QtFatalMsg, context=..., msg=msg@entry=0x7f26c1e79db8 "ASSERT: \"%s\" in file %s, line %d", ap=ap@entry=0x7fffc1d9eb30)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/global/qlogging.cpp:378
#12 0x00007f26c1ae44f9 in QMessageLogger::fatal (this=this@entry=0x7fffc1d9ec18, msg=msg@entry=0x7f26c1e79db8 "ASSERT: \"%s\" in file %s, line %d")
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/global/qlogging.cpp:901
#13 0x00007f26c1ae34b8 in qt_assert (assertion=<optimized out>, file=<optimized out>, line=<optimized out>)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/global/qassert.cpp:68
#14 0x000000000047cbf5 in DolphinViewContainer::isSelectionModeEnabled (this=0xe84d30) at /home/akseli/Repositories/kde/src/dolphin/src/dolphinviewcontainer.cpp:379
#15 0x000000000045d149 in DolphinMainWindow::connectViewSignals (this=0xa5d040, container=0xe84d30) at /home/akseli/Repositories/kde/src/dolphin/src/dolphinmainwindow.cpp:2413
#16 0x0000000000450171 in DolphinMainWindow::activeViewChanged (this=0xa5d040, viewContainer=0xe84d30) at /home/akseli/Repositories/kde/src/dolphin/src/dolphinmainwindow.cpp:1466
#17 0x00000000004755bf in QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<DolphinViewContainer*>, void, void (DolphinMainWindow::*)(DolphinViewContainer*)>::call
    (f=(void (DolphinMainWindow::*)(class DolphinMainWindow * const, class DolphinViewContainer *)) 0x44fd0c <DolphinMainWindow::activeViewChanged(DolphinViewContainer*)>, o=0xa5d040, arg=0x7fffc1d9f7f0) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:145
#18 0x0000000000473032 in QtPrivate::FunctionPointer<void (DolphinMainWindow::*)(DolphinViewContainer*)>::call<QtPrivate::List<DolphinViewContainer*>, void>
    (f=(void (DolphinMainWindow::*)(class DolphinMainWindow * const, class DolphinViewContainer *)) 0x44fd0c <DolphinMainWindow::activeViewChanged(DolphinViewContainer*)>, o=0xa5d040, arg=0x7fffc1d9f7f0) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:182
#19 0x000000000046fb2b in QtPrivate::QCallableObject<void (DolphinMainWindow::*)(DolphinViewContainer*), QtPrivate::List<DolphinViewContainer*>, void>::impl
--Type <RET> for more, q to quit, c to continue without paging--c
    (which=1, this_=0xb606e0, r=0xa5d040, a=0x7fffc1d9f7f0, ret=0x0) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:520
#20 0x00007f26c1c02011 in QtPrivate::QSlotObjectBase::call (a=0x7fffc1d9f7f0, r=0xa5d040, this=0xb606e0)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qobjectdefs_impl.h:433
#21 doActivate<false> (sender=0xcc9d80, signal_index=11, argv=0x7fffc1d9f7f0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qobject.cpp:4021
#22 0x00000000004a3033 in DolphinTabWidget::activeViewChanged (this=0xcc9d80, _t1=0xe84d30)
    at /home/akseli/Repositories/kde/build/dolphin/src/dolphinstatic_autogen/include/moc_dolphintabwidget.cpp:500
#23 0x00000000004a6793 in QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<DolphinViewContainer*>, void, void (DolphinTabWidget::*)(DolphinViewContainer*)>::call
    (f=(void (DolphinTabWidget::*)(class DolphinTabWidget * const, class DolphinViewContainer *)) 0x4a2fe6 <DolphinTabWidget::activeViewChanged(DolphinViewContainer*)>, o=0xcc9d80, arg=0x7fffc1d9f9d0) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:145
#24 0x00000000004a62d2 in QtPrivate::FunctionPointer<void (DolphinTabWidget::*)(DolphinViewContainer*)>::call<QtPrivate::List<DolphinViewContainer*>, void>
    (f=(void (DolphinTabWidget::*)(class DolphinTabWidget * const, class DolphinViewContainer *)) 0x4a2fe6 <DolphinTabWidget::activeViewChanged(DolphinViewContainer*)>, o=0xcc9d80, arg=0x7fffc1d9f9d0) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:182
#25 0x00000000004a5d1d in QtPrivate::QCallableObject<void (DolphinTabWidget::*)(DolphinViewContainer*), QtPrivate::List<DolphinViewContainer*>, void>::impl
    (which=1, this_=0x1032400, r=0xcc9d80, a=0x7fffc1d9f9d0, ret=0x0) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:520
#26 0x00007f26c1c02011 in QtPrivate::QSlotObjectBase::call (a=0x7fffc1d9f9d0, r=0xcc9d80, this=0x1032400)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qobjectdefs_impl.h:433
#27 doActivate<false> (sender=0xf6dfd0, signal_index=7, argv=0x7fffc1d9f9d0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qobject.cpp:4021
#28 0x000000000049ca69 in DolphinTabPage::activeViewChanged (this=0xf6dfd0, _t1=0xe84d30)
    at /home/akseli/Repositories/kde/build/dolphin/src/dolphinstatic_autogen/include/moc_dolphintabpage.cpp:271
#29 0x000000000049bdc5 in DolphinTabPage::slotViewActivated (this=0xf6dfd0) at /home/akseli/Repositories/kde/src/dolphin/src/dolphintabpage.cpp:433
#30 0x000000000049f5f9 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (DolphinTabPage::*)()>::call(void (DolphinTabPage::*)(), DolphinTabPage*, void**)
    (f=(void (DolphinTabPage::*)(class DolphinTabPage * const)) 0x49baf0 <DolphinTabPage::slotViewActivated()>, o=0xf6dfd0, arg=0x7fffc1d9fc58)
    at /usr/include/qt6/QtCore/qobjectdefs_impl.h:145
#31 0x000000000049f280 in QtPrivate::FunctionPointer<void (DolphinTabPage::*)()>::call<QtPrivate::List<>, void>(void (DolphinTabPage::*)(), DolphinTabPage*, void**)
    (f=(void (DolphinTabPage::*)(class DolphinTabPage * const)) 0x49baf0 <DolphinTabPage::slotViewActivated()>, o=0xf6dfd0, arg=0x7fffc1d9fc58)
    at /usr/include/qt6/QtCore/qobjectdefs_impl.h:182
#32 0x000000000049ecff in QtPrivate::QCallableObject<void (DolphinTabPage::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*)
    (which=1, this_=0x10333e0, r=0xf6dfd0, a=0x7fffc1d9fc58, ret=0x0) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:520
#33 0x00007f26c1c02011 in QtPrivate::QSlotObjectBase::call (a=0x7fffc1d9fc58, r=0xf6dfd0, this=0x10333e0)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qobjectdefs_impl.h:433
#34 doActivate<false> (sender=0xfc7980, signal_index=7, argv=0x7fffc1d9fc58) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qobject.cpp:4021
#35 0x00007f26c5fa2db9 in DolphinView::activated (this=0xfc7980) at /home/akseli/Repositories/kde/build/dolphin/src/dolphinprivate_autogen/include/moc_dolphinview.cpp:1791
#36 0x00007f26c5f95f76 in DolphinView::setActive (this=0xfc7980, active=true) at /home/akseli/Repositories/kde/src/dolphin/src/views/dolphinview.cpp:269
#37 0x00007f26c5f990ff in DolphinView::eventFilter (this=0xfc7980, watched=0xbde750, event=0x7fffc1d9fec0) at /home/akseli/Repositories/kde/src/dolphin/src/views/dolphinview.cpp:951
#38 0x00007f26c1ba092e in QCoreApplicationPrivate::sendThroughObjectEventFilters (receiver=receiver@entry=0xbde750, event=event@entry=0x7fffc1d9fec0)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1250
#39 0x00007f26c2dc2b28 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0xbde750, e=0x7fffc1d9fec0)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:3284
#40 0x00007f26c1ba0ba8 in QCoreApplication::notifyInternal2 (receiver=0xbde750, event=0x7fffc1d9fec0)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1118
#41 0x00007f26c1ba0dad in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1536
#42 0x00007f26c2dc8eea in QApplicationPrivate::setFocusWidget (reason=21015744, focus=<optimized out>)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:1538
#43 QApplicationPrivate::setFocusWidget (focus=focus@entry=0xbde750, reason=reason@entry=Qt::OtherFocusReason)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:1492
#44 0x00007f26c2e17e16 in QWidget::setFocus (reason=Qt::OtherFocusReason, this=<optimized out>) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qwidget.cpp:6580
#45 QWidget::setFocus (this=0xfc7980, reason=Qt::OtherFocusReason) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qwidget.cpp:6527
#46 0x0000000000464835 in QWidget::setFocus (this=0xfc7980) at /usr/include/qt6/QtWidgets/qwidget.h:423
#47 0x000000000047c67e in DolphinViewContainer::setSelectionModeEnabled (this=0xe84d30, enabled=false, actionCollection=0x0, bottomBarContents=SelectionMode::BottomBar::GeneralContents)
    at /home/akseli/Repositories/kde/src/dolphin/src/dolphinviewcontainer.cpp:330
#48 0x000000000047c49e in operator() (__closure=0x140be60) at /home/akseli/Repositories/kde/src/dolphin/src/dolphinviewcontainer.cpp:346
#49 0x00000000004819e2 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, DolphinViewContainer::setSelectionModeEnabled(bool, KActionCollection*, SelectionMode::BottomBar::Contents)::<lambda()> >::call(struct {...} &, void **) (f=..., arg=0x7fffc1da0238) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:137
#50 0x0000000000481895 in QtPrivate::Functor<DolphinViewContainer::setSelectionModeEnabled(bool, KActionCollection*, SelectionMode::BottomBar::Contents)::<lambda()>, 0>::call<QtPrivate::List<>, void>(struct {...} &, void *, void **) (f=..., arg=0x7fffc1da0238) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:339
#51 0x00000000004815d8 in QtPrivate::QCallableObject<DolphinViewContainer::setSelectionModeEnabled(bool, KActionCollection*, SelectionMode::BottomBar::Contents)::<lambda()>, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=1, this_=0x140be50, r=0xe84d30, a=0x7fffc1da0238, ret=0x0)
    at /usr/include/qt6/QtCore/qobjectdefs_impl.h:522
#52 0x00007f26c1c02011 in QtPrivate::QSlotObjectBase::call (a=0x7fffc1da0238, r=0xe84d30, this=0x140be50)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qobjectdefs_impl.h:433
#53 doActivate<false> (sender=0x135a140, signal_index=7, argv=0x7fffc1da0238) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qobject.cpp:4021
#54 0x00000000004d4f5b in SelectionMode::TopBar::selectionModeLeavingRequested (this=0x135a140)
    at /home/akseli/Repositories/kde/build/dolphin/src/dolphinstatic_autogen/include/moc_topbar.cpp:160
#55 0x00000000004d53a4 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (SelectionMode::TopBar::*)()>::call(void (SelectionMode::TopBar::*)(), SelectionMode::TopBar*, void**)
    (f=(void (SelectionMode::TopBar::*)(class SelectionMode::TopBar * const)) 0x4d4f34 <SelectionMode::TopBar::selectionModeLeavingRequested()>, o=0x135a140, arg=0x7fffc1da0470)
    at /usr/include/qt6/QtCore/qobjectdefs_impl.h:145
#56 0x00000000004d532a in QtPrivate::FunctionPointer<void (SelectionMode::TopBar::*)()>::call<QtPrivate::List<>, void>(void (SelectionMode::TopBar::*)(), SelectionMode::TopBar*, void**)
    (f=(void (SelectionMode::TopBar::*)(class SelectionMode::TopBar * const)) 0x4d4f34 <SelectionMode::TopBar::selectionModeLeavingRequested()>, o=0x135a140, arg=0x7fffc1da0470)
    at /usr/include/qt6/QtCore/qobjectdefs_impl.h:182
#57 0x00000000004d526b in QtPrivate::QCallableObject<void (SelectionMode::TopBar::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*)
    (which=1, this_=0x140afd0, r=0x135a140, a=0x7fffc1da0470, ret=0x0) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:520
#58 0x00007f26c1c02011 in QtPrivate::QSlotObjectBase::call (a=0x7fffc1da0470, r=0x135a140, this=0x140afd0)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qobjectdefs_impl.h:433
#59 doActivate<false> (sender=0x140acc0, signal_index=9, argv=0x7fffc1da0470) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qobject.cpp:4021
#60 0x00007f26c1bf85f7 in QMetaObject::activate (sender=sender@entry=0x140acc0, m=m@entry=0x7f26c336ee20, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7fffc1da0470)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qobject.cpp:4081
#61 0x00007f26c2ef2364 in QAbstractButton::clicked (this=this@entry=0x140acc0, _t1=<optimized out>)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/redhat-linux-build/src/widgets/Widgets_autogen/include/moc_qabstractbutton.cpp:408
#62 0x00007f26c2ef25ef in QAbstractButtonPrivate::emitClicked (this=0x140ad10) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/widgets/qabstractbutton.cpp:379
#63 0x00007f26c2ef3cf0 in QAbstractButtonPrivate::click (this=0x140ad10) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/widgets/qabstractbutton.cpp:372
#64 0x00007f26c2ef3ef8 in QAbstractButton::mouseReleaseEvent (this=0x140acc0, e=0x7fffc1da0ae0)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/widgets/qabstractbutton.cpp:974
#65 0x00007f26c2e1e478 in QWidget::event (this=0x140acc0, event=0x7fffc1da0ae0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qwidget.cpp:9368
#66 0x00007f26c2dc2b38 in QApplicationPrivate::notify_helper (this=this@entry=0x782f50, receiver=receiver@entry=0x140acc0, e=e@entry=0x7fffc1da0ae0)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:3290
#67 0x00007f26c2dcca6b in QApplication::notify (this=<optimized out>, receiver=0x140acc0, e=<optimized out>)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:2777
#68 0x00007f26c1ba0ba8 in QCoreApplication::notifyInternal2 (receiver=0x140acc0, event=0x7fffc1da0ae0)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1118
#69 0x00007f26c1ba0dbd in QCoreApplication::sendSpontaneousEvent (receiver=<optimized out>, event=<optimized out>)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1550
#70 0x00007f26c2dcb253 in QApplicationPrivate::sendMouseEvent
    (receiver=receiver@entry=0x140acc0, event=event@entry=0x7fffc1da0ae0, alienWidget=<optimized out>, nativeWidget=0xa5d040, buttonDown=buttonDown@entry=0x7f26c33b26e0 <qt_button_down>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:2361
#71 0x00007f26c2e32006 in QWidgetWindow::handleMouseEvent (this=0xbe7630, event=event@entry=0x7fffc1da0da0)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qwidgetwindow.cpp:627
#72 0x00007f26c2e34f30 in QWidgetWindow::event (this=0xbe7630, event=0x7fffc1da0da0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qwidgetwindow.cpp:241
#73 0x00007f26c2dc2b38 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0xbe7630, e=0x7fffc1da0da0)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:3290
#74 0x00007f26c1ba0ba8 in QCoreApplication::notifyInternal2 (receiver=0xbe7630, event=0x7fffc1da0da0)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1118
#75 0x00007f26c1ba0dbd in QCoreApplication::sendSpontaneousEvent (receiver=<optimized out>, event=<optimized out>)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1550
#76 0x00007f26c2409127 in QGuiApplicationPrivate::processMouseEvent (e=0x7f26a0002ae0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/gui/kernel/qguiapplication.cpp:2315
#77 0x00007f26c2467c1c in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/gui/kernel/qwindowsysteminterface.cpp:1109
#78 0x00007f26c293ff14 in userEventSourceDispatch (source=<optimized out>) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/gui/platform/unix/qeventdispatcher_glib.cpp:38
#79 0x00007f26bfd11e5c in g_main_dispatch (context=0x7f26a8000ef0) at ../glib/gmain.c:3476
#80 g_main_context_dispatch_unlocked (context=0x7f26a8000ef0) at ../glib/gmain.c:4284
#81 0x00007f26bfd6cf18 in g_main_context_iterate_unlocked.isra.0 (context=context@entry=0x7f26a8000ef0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>)
    at ../glib/gmain.c:4349
#82 0x00007f26bfd0fad3 in g_main_context_iteration (context=0x7f26a8000ef0, may_block=1) at ../glib/gmain.c:4414
#83 0x00007f26c1e4096f in QEventDispatcherGlib::processEvents (this=0x794bd0, flags=...) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:393
#84 0x00007f26c1bad9bb in QEventLoop::exec (this=this@entry=0x7fffc1da11d0, flags=..., flags@entry=...) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/global/qflags.h:34
#85 0x00007f26c1ba97bd in QCoreApplication::exec () at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/global/qflags.h:74
#86 0x00000000004406ca in main (argc=1, argv=0x7fffc1da2738) at /home/akseli/Repositories/kde/src/dolphin/src/main.cpp:253
Comment 1 Akseli Lahtinen 2023-12-19 12:52:31 UTC
It's really hard to decipher what that assert is for.
Comment 2 Akseli Lahtinen 2023-12-19 12:54:42 UTC
*** Bug 472711 has been marked as a duplicate of this bug. ***
Comment 3 Akseli Lahtinen 2023-12-20 07:49:35 UTC
Seems this bug only happens with Plasma 6.
Comment 4 Akseli Lahtinen 2023-12-20 09:08:15 UTC
Seems the crash happen if the view, where the selection mode is in, is not activated first before going out of the selection mode.
Comment 5 Bug Janitor Service 2023-12-20 09:40:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/679
Comment 6 Akseli Lahtinen 2023-12-22 08:29:44 UTC
Git commit 7043ae1100696c9d759b2a101278c5b8eecc09a2 by Akseli Lahtinen.
Committed on 22/12/2023 at 09:29.
Pushed by akselmo into branch 'master'.

Set viewFocus when DolphinViewContainer state is consistent

Read Felix' comment here: https://invent.kde.org/system/dolphin/-/merge_requests/679#note_835657

In short: 
> The above change moves the `m_view->setFocus()` towards a point in time in 
> which `DolphinViewContainer`'s selection mode state is consistent again.

M  +4    -3    src/dolphinviewcontainer.cpp

https://invent.kde.org/system/dolphin/-/commit/7043ae1100696c9d759b2a101278c5b8eecc09a2