Set viewFocus when DolphinViewContainer state is consistent

Read Felix' comment here: https://invent.kde.org/system/dolphin/-/merge_requests/679#note_835657

In short: 
> The above change moves the `m_view->setFocus()` towards a point in time in 
> which `DolphinViewContainer`'s selection mode state is consistent again.

BUG:478724